[gd_scene load_steps=2 format=3 uid="uid://b3eu3aqi46l3u"]

[ext_resource type="Script" uid="uid://c3rt787asmy7a" path="res://scripts/ui/debug.gd" id="1_v6tkm"]

[node name="DebugOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6tkm")

[node name="BottomLeft" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -77.0
offset_right = 77.0
grow_vertical = 0
alignment = 2

[node name="FPS" type="Label" parent="BottomLeft"]
layout_mode = 2
text = "<FPS>"

[node name="Pos" type="Label" parent="BottomLeft"]
layout_mode = 2
text = "<Pos>"

[node name="Tile" type="Label" parent="BottomLeft"]
layout_mode = 2
text = "<Tile>"

[node name="BottomRight" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -77.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="Spores" type="Label" parent="BottomRight"]
layout_mode = 2
text = "<Spores>"

[node name="TopLeft" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 77.0
offset_bottom = 23.0
alignment = 2

[node name="Seed" type="Label" parent="TopLeft"]
layout_mode = 2
text = "<Seed>"

[connection signal="visibility_changed" from="." to="." method="_first_shown"]
